# c-utilities

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  c-utilities.sln  c_utilities_exe.vcxproj  c_utilities_lib.vcxproj  c_utilities_test.vcxproj  premake5.lua
src/: main.c
src/util/: alloc.c  alloc.h  container.c  container.h  dequeue.c  dequeue.h  error.c  error.h  hash.c  hash.h  list.c  list.h  macros.h  mem.c  mem.h  pch.h  queue.c  queue.h  result.c  result.h  stack.c  stack.h  string.c  string.h  system.h  thread_pool.c  thread_pool.h  tree.c  tree.h  types.h  unordered_map.c  unordered_map.h  vector.c  vector.h
tests/: common.h  test_list.c  test_list.h  test_main.c  test_main.h  test_vector.c  test_vector.h
